--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aliyun-oss-react-native",
+  "name": "aliyun-oss-react-native-abu",
   "version": "1.0.0-alpha.7",
   "description": "React Native SDK for aliyun object storage service",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aliyun/aliyun-oss-react-native.git"
+    "url": "git+https://github.com/qiaomengnan16/aliyun-oss-react-native-abu.git"
   },
   "keywords": [
     "oss",
